[package]
name = "megahack-extension-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getfn = "0.1.1"
detour = { git = "https://github.com/darfink/detour-rs" }
winwrap = "0.1"
lazy_static = "1.4"
reqwest = "0.11.6"
serde = "1.0.130"
tokio = "1.12.0"