[package]
name = "nong-downloader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getfn = "0.1.1"
detour = { git = "https://github.com/darfink/detour-rs" }
winwrap = "0.1"
lazy_static = "1.4"
clipboard-win = "4.2.2"
directories = "4.0.1"